Update: About Me, Fix: Scrollbar

--- a/style.css
+++ b/style.css
@@ -553,6 +553,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.75rem;
 }
 
+.mt-3{
+  margin-top: 0.75rem;
+}
+
 .block{
   display: block;
 }
@@ -593,6 +597,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 28rem;
 }
 
+.max-w-lg{
+  max-width: 32rem;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -609,10 +617,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
+.space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .self-end{
@@ -627,12 +635,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow: hidden;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .border{
@@ -835,13 +843,36 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
+  width: 8px;
+  height: 8px;
+  background-color: #F9F9F9;
 }
 
-::webkit-scrollbar-thumb{
-  --tw-bg-opacity: 1;
-  background-color: rgb(76 76 109 / var(--tw-bg-opacity));
+::webkit-scrollbar-track {
+  box-shadow: inset 0 0 3px rgb(0 0 0 / 20%);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #FF896B;
+  border-radius: 10px;
+  border: 1px solid #F9F9F9;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4C4C6D;
+}
+
+::-moz-selection {
+  background-color: #FF896B;
+  color: #fff;
+  border-radius: 50%;
+}
+
+::selection {
+  background-color: #FF896B;
+  color: #fff;
+  border-radius: 50%;
 }
 
 .hover\:scale-105:hover{
@@ -929,6 +960,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -972,31 +1008,4 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-  background-color: #F9F9F9;
-}
-
-::webkit-scrollbar-track {
-  box-shadow: inset 0 0 3px rgb(0 0 0 / 20%);
-  background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #FF896B;
-  border-radius: 10px;
-  border: 1px solid #F9F9F9;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #4C4C6D;
-}
-
-::selection {
-  background-color: #FF896B;
-  color: #fff;
-  border-radius: 50%;
 }
